small tweaks of UI and ReadMe

--- a/index.html
+++ b/index.html
@@ -14,11 +14,25 @@
     <link rel="shortcut icon" href="//s3-us-west-2.amazonaws.com/alansite/resources/favicon.ico" type="image/x-icon"/>
     <style type="text/less">
         @import "common/index";
+
+        body {
+            padding: 4em 25vw;
+            color: #444444;
+        }
+
+        .title {
+            font-size: 3em;
+        }
+
+        .menu {
+            font-size: 1.3em;
+            line-height: 1.5em;
+        }
     </style>
 </head>
 <body>
 <div class="title">HTTP203</div>
-<ul>
+<ul class="menu">
     <li>
         Best Web Features in 2018
         <ul>
