--- a/best-web-features-2018/reporting-observer.html
+++ b/best-web-features-2018/reporting-observer.html
@@ -4,164 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <title>Display: Contents;</title>
+    <title>Reporting Observer</title>
+    <meta name="keywords" content="zhufengxu blog http203 reportingobserver"/>
+    <meta name="description"
+          content="Zhufeng Xu (Alan)'s personal website & blog, sharing an unofficial repository, implementing Non-Authoritative Information(http status code 203) and top-notch techs about Javascript and Frontend issues from Google fellows."/>
     <meta name="author" content="Zhufeng Xu (Alan)"/>
     <meta name="robots" content="index,follow"/>
     <meta name="google" content="index,follow"/>
     <meta name="googlebot" content="index,follow"/>
     <meta name="verify" content="index,follow"/>
-    <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Open+Sans|Staatliches" rel="stylesheet">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <link rel="shortcut icon" href="//s3-us-west-2.amazonaws.com/alansite/resources/favicon.ico" type="image/x-icon"/>
-    <style type="text/less">
-        @import "../common/index";
-
-        .banner {
-            background: url('https://images.unsplash.com/photo-1531449862596-16e4c62e2b10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80') fixed center;
-            background-size: cover;
-            max-width: 100vw;
-            height: 100vh;
-            box-sizing: border-box;
-            overflow: hidden;
-            display: grid;
-            grid-template-columns: repeat(4, 18vw);
-            grid-template-rows: repeat(4, 18vw);
-            grid-gap: 2vw;
-        }
-
-        .words {
-            font-family: 'Staatliches', cursive;
-            display: contents;
-
-            div {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                color: white;
-                font-size: 3em;
-            }
-        }
-
-        .blocks {
-            font-family: 'Staatliches', cursive;
-            display: contents;
-
-            div {
-                display: flex;
-                box-sizing: border-box;
-                width: 18vw;
-                height: 18vw;
-                padding: 1em;
-                justify-content: center;
-                align-items: center;
-                font-size: 1.3em;
-                background: rgba(255, 255, 255, 0.7);
-                transition: all .25s ease-in-out;
-
-                &:hover {
-                    background: rgba(255, 165, 0, 0.7);
-                    transform: scale(1.1);
-                    color: white;
-                    z-index: 1;
-                }
-            }
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Open+Sans|Staatliches" rel="stylesheet">
 </head>
 <body>
+<header class="dark">
+    <a href="https://alan-zhufengxu.com" target="_blank">
+        <img alt="logo" src="/assets/alan_xu_logo.png"/>
+        <div class="ml-s">Alan's Site</div>
+    </a>
+</header>
 <main>
-    <section class="banner">
-        <div class="words">
-            <div style="grid-column: 1; grid-row: 2">2019 Has Come.</div>
-            <div style="grid-column: 4 / span 2; grid-row: 1">What Do You Plan To Do?</div>
-        </div>
-        <div class="blocks">
-            <div>I plan to have a sip of falling in love.</div>
-            <div style="grid-column: 2; grid-row: 2">Nothing but PARTY-ing!!</div>
-            <div style="grid-column: 4; grid-row: 2">I'd rather stay at home.</div>
-            <div style="grid-column: 2; grid-row: 3">Hanging around New York?</div>
-            <div style="grid-column: 5; grid-row: 3">Need to find a job.</div>
-        </div>
-    </section>
-    <section class="content">
-        <div class="title-wrapper flex-wrp item-center content-between">
-            <div class="title">display: contents;</div>
-            <div class="label bg-orange">CSS</div>
-        </div>
-        <div class="desc">
-            <div class="title">
-                HTTP203 Description
-            </div>
-            <div class="simple-desc">
-                <div>
-                    <i>"Containing element pretends it's not there in terms of layout."</i>
-                </div>
-                <div>
-                    <i>"You might want an element there for semantics, but you want the children to be part of a flexbox
-                        or a Grid"</i>
-                </div>
-                <div class="referencer">-- By Jake</div>
-            </div>
-        </div>
-        <div class="desc">
-            <div class="title">
-                Implementation Description
-            </div>
-            <div class="implementation">
-                A grid system is used on the top layout. While under the grid system, 2 divs, labeled blocks and words
-                individually, are composed under their own HTML structures or say semantics. 'display: contents;' here
-                helps apply grid attributes to all children equally, penetrating the HTML structures.
-            </div>
-        </div>
-        <div class="desc">
-            <div class="title">
-                HTTP202 - Official Description
-            </div>
-            <div class="official-desc">
-                <div>
-                    Browsers (excepting Firefox) will remove any element with a display value of contents set on it from
-                    the accessibility tree. This will cause the element and all its descendant elements to no longer be
-                    announced by screen reading technology.
-                </div>
-                <div class="referencer">
-                    <span>-- By</span>
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/display#display_contents" target="_blank">
-                        MDN Official Doc
-                    </a>
-                </div>
-                <div class="referencer">
-                    <span>@See also</span>
-                    <a href="https://css-tricks.com/get-ready-for-display-contents/" target="_blank">CSS-Tricks
-                        Article</a>
-                </div>
-            </div>
-        </div>
-        <div class="desc">
-            <div class="title">
-                Can I Use?
-            </div>
-            <p class="ciu_embed" data-feature="css-display-contents" data-periods="future_1,current,past_1,past_2"
-               data-accessible-colours="false">
-                <a href="http://caniuse.com/#feat=css-display-contents">Can I Use css-display-contents?</a> Data on
-                support for the css-display-contents feature across the major browsers from caniuse.com.
-            </p>
-        </div>
-    </section>
-    <section class="navigator">
-        <a href="/" class="flex-wrp item-center">
-            <div class="mr-s">←</div>
-            <div class="flex-wrp flex-column">
-                <div>Back</div>
-                <div class="desc">to HTTP203 List</div>
-            </div>
-        </a>
-        <a href="https://alan-zhufengxu.com" target="_blank" class="flex-wrp item-center">
-            <div class="flex-wrp flex-column">
-                <div>See More Projects</div>
-                <div class="desc">At Alan's Site</div>
-            </div>
-            <div class="ml-s">→</div>
-        </a>
-    </section>
+    <div class="title">HTTP203</div>
 </main>
 <footer>
     <div>
@@ -201,6 +66,5 @@
         <div>©2019, Alan'site. All Rights Reserved</div>
     </div>
 </footer>
-<script src="https://cdn.jsdelivr.net/gh/ireade/caniuse-embed/caniuse-embed.min.js"></script>
 </body>
 </html>
