fix redirect problem

--- a/best-web-features-2018/display-contents.html
+++ b/best-web-features-2018/display-contents.html
@@ -147,7 +147,7 @@
         </div>
     </section>
     <section class="navigator">
-        <a href="/" class="flex-wrp item-center">
+        <a href="/http203/" class="flex-wrp item-center">
             <div class="mr-s">←</div>
             <div class="flex-wrp flex-column">
                 <div>Back</div>
