Feature: Reporting Observer

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
         @import "common/index";
 
         main {
-            padding: 6em 20vw;
-
             .title {
                 font-family: 'Staatliches', cursive;
                 font-size: 3em;
@@ -121,11 +119,11 @@
                 </li>
                 <li>
                     <div class="leaf"></div>
-                    <a>ReportingObserver</a>
+                    <a href="best-web-features-2018/reporting-observer.html">ReportingObserver</a>
                 </li>
                 <li>
                     <div class="leaf"></div>
-                    <a>Scroll Snap</a>
+                    <a href="best-web-features-2018/scroll-snap.html">Scroll Snap</a>
                 </li>
                 <li>
                     <div class="leaf"></div>
@@ -149,7 +147,7 @@
                 </li>
                 <li>
                     <div class="leaf"></div>
-                    <a>Bitmaprendererer</a>
+                    <a>Bitmaprenderer</a>
                 </li>
                 <li>
                     <div class="leaf"></div>
