Feature: Conic Gradient

--- a/best-web-features-2018/scroll-snap.html
+++ b/best-web-features-2018/scroll-snap.html
@@ -118,7 +118,7 @@
                 <div class="referencer">
                     <span>@See also</span>
                     <a href="https://css-tricks.com/practical-css-scroll-snapping/" target="_blank">
-                        CSS-Tricks Articles
+                        CSS-Tricks Article
                     </a>
                 </div>
             </div>
