--- a/best-web-features-2018/conic-gradient.html
+++ b/best-web-features-2018/conic-gradient.html
@@ -4,232 +4,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <title>HTTP203</title>
+    <title>Conic Gradient</title>
+    <meta name="keywords" content="zhufengxu blog http203 namedworker"/>
+    <meta name="description"
+          content="Zhufeng Xu (Alan)'s personal website & blog, sharing an unofficial repository, implementing Non-Authoritative Information(http status code 203) and top-notch techs about Javascript and Frontend issues from Google fellows."/>
     <meta name="author" content="Zhufeng Xu (Alan)"/>
     <meta name="robots" content="index,follow"/>
     <meta name="google" content="index,follow"/>
     <meta name="googlebot" content="index,follow"/>
     <meta name="verify" content="index,follow"/>
-    <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Open+Sans|Staatliches" rel="stylesheet">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
     <link rel="shortcut icon" href="//s3-us-west-2.amazonaws.com/alansite/resources/favicon.ico" type="image/x-icon"/>
+    <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Open+Sans|Staatliches" rel="stylesheet">
     <style type="text/less">
-        @import "common/index";
+        @import "/common/index";
+
+        .gradient {
+            width: 100%;
+            height: 75px;
+            position: absolute;
+            top: 0;
+            background: conic-gradient(red, yellow, lime, aqua, blue, magenta, red);
+        }
 
         main {
-            .title {
-                font-family: 'Staatliches', cursive;
-                font-size: 3em;
-            }
+            padding: 0;
 
-            .menu {
-                font-size: 1.1em;
-                line-height: 1.5em;
+            .content {
+                padding: 6em 20vw;
 
-                a {
-                    text-decoration: none;
-                }
+                .code-wrapper {
+                    background: #ebebeb;
+                    padding: .5em 2em;
 
-                li {
-                    position: relative;
-                }
-
-                .sub-menu {
-                    li:last-child {
-                        padding-bottom: .75em;
+                    pre {
+                        font-family: Consolas, serif;
                     }
                 }
-
-                .subtitle {
-                    font-weight: bold;
-                }
             }
 
-            .timeline {
-                position: absolute;
-                top: 0;
-                left: -11em;
-                height: 100%;
-                border-left: 3px solid #444444;
-            }
-
-            .timeline-continue {
-                position: absolute !important;
-                list-style-type: none;
-                top: 100%;
-                left: -8.73em;
-                height: 5em;
-                border-left: 3px dashed #444444;
-            }
-
-            .timeline-item {
-                position: absolute;
-                top: 0;
-                left: -5em;
-                font-size: .85em;
-                font-weight: bold;
-                transform: translateX(-100%);
-            }
-
-            .root {
-                position: absolute;
-                top: 0;
-                left: -11em;
-                width: 14px;
-                height: 3px;
-                border-top: 3px solid #444444;
-            }
-
-            .leaf {
-                position: absolute;
-                top: 0;
-                left: -13.2em;
-                width: 7px;
-                height: 1px;
-                border-top: 1px solid #888888;
+            .navigator {
+                padding: 0 20vw;
             }
         }
     </style>
 </head>
 <body>
-<header class="dark fixed">
+<header class="light">
     <a href="https://alan-zhufengxu.com" target="_blank">
         <img alt="logo" src="/assets/alan_xu_logo.png"/>
         <div class="ml-s">Alan's Site</div>
     </a>
 </header>
+<section class="gradient"></section>
 <main>
-    <div class="title">HTTP203</div>
-    <ul class="menu relative">
-        <li class="timeline-continue"></li>
-        <li>
-            <div class="timeline"></div>
-            <div class="root"></div>
-            <div class="subtitle">
-                Best Web Features in 2018
+    <section class="content">
+        <div class="title-wrapper flex-wrp item-center content-between">
+            <div class="title">Conic Gradient</div>
+            <div class="label bg-orange">CSS</div>
+        </div>
+        <div class="desc">
+            <div class="title">
+                HTTP203 Description
             </div>
-            <div class="timeline-item">
-                <div>Dec 17, 2018</div>
+            <div class="simple-desc">
+                <div>
+                    <i>
+                        "Literally beautiful."
+                    </i>
+                </div>
+                <div class="referencer">-- By Surma</div>
             </div>
-            <ul class="sub-menu">
-                <li>
-                    <div class="leaf"></div>
-                    <a href="best-web-features-2018/display-contents.html">
-                        display: contents;
+        </div>
+        <div class="desc">
+            <div class="title">
+                HTTP202 - Official Description
+            </div>
+            <div class="official-desc">
+                <div>
+                    The conic-gradient() CSS function creates an image consisting of a radial gradient with color
+                    transitions around a center point rather than radiating from the center. Example conical gradients
+                    include pie charts and color wheels.
+                </div>
+                <div class="referencer">
+                    <span>-- By</span>
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/conic-gradient" target="_blank">
+                        MDN Official Doc
                     </a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a href="best-web-features-2018/reporting-observer.html">ReportingObserver</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a href="best-web-features-2018/scroll-snap.html">Scroll Snap</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a href="best-web-features-2018/conic-gradient.html">Conic Gradient</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>Async Clipboard API</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>CSS Typed OM</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>updateViaCache</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>Bitmaprenderer</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>Web Locks</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>CSS Paint API</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>toggleAttribute</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>OffscreenCanvas</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>Focus PreventScroll</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>Sensors</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>BigInt</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>Page Lifecycle API</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>trimStart/End</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>import.meta</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>RegEx Named Capture Groups</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>Intl.RelativeTimeFormat</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>ResizeObserver</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>Audio Worklet</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>Fetch Cache Mode</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
-                    <a>Class Fields</a>
-                </li>
-            </ul>
-        </li>
-        <li>
-            <div class="timeline"></div>
-            <div class="root"></div>
-            <div class="subtitle">
-                Old vs. New Javascript
-            </div>
-            <div class="timeline-item">
-                <div>Dec 04, 2018</div>
-            </div>
-            <ul class="sub-menu">
-                <li>
-                    <div class="leaf"></div>
-                    <a>
-                        Web Animation API
+                </div>
+                <div class="referencer">
+                    <span>@See also</span>
+                    <a href="https://css-tricks.com/snippets/css/css-conic-gradient/" target="_blank">
+                        CSS-Tricks Article
                     </a>
-                </li>
-            </ul>
-        </li>
-    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="desc">
+            <div class="title">
+                Implementation Description
+            </div>
+            <div class="implementation">
+                <div>Look at the fancy header!</div>
+                <div class="code-wrapper">
+                     <pre>
+.gradient {
+    background: conic-gradient(red, yellow, lime, aqua, blue, magenta, red);
+}</pre>
+                </div>
+            </div>
+        </div>
+        <div class="desc">
+            <div class="title">
+                Can I Use?
+            </div>
+            <p class="ciu_embed" data-feature="css-conic-gradients" data-periods="future_1,current,past_1,past_2"
+               data-accessible-colours="false">
+                <a href="http://caniuse.com/#feat=css-conic-gradients">Can I Use css-conic-gradients?</a> Data on
+                support for the css-conic-gradients feature across the major browsers from caniuse.com.
+            </p>
+        </div>
+    </section>
+    <section class="navigator">
+        <a href="/http203/" class="flex-wrp item-center">
+            <div class="mr-s">←</div>
+            <div class="flex-wrp flex-column">
+                <div>Back</div>
+                <div class="desc">to HTTP203 List</div>
+            </div>
+        </a>
+        <a href="https://alan-zhufengxu.com" target="_blank" class="flex-wrp item-center">
+            <div class="flex-wrp flex-column">
+                <div>See More Projects</div>
+                <div class="desc">At Alan's Site</div>
+            </div>
+            <div class="ml-s">→</div>
+        </a>
+    </section>
 </main>
 <footer>
     <div>
@@ -269,5 +181,6 @@
         <div>©2019, Alan'site. All Rights Reserved</div>
     </div>
 </footer>
+<script src="https://cdn.jsdelivr.net/gh/ireade/caniuse-embed/caniuse-embed.min.js"></script>
 </body>
 </html>
