Fix logo problem

--- a/best-web-features-2018/conic-gradient.html
+++ b/best-web-features-2018/conic-gradient.html
@@ -53,7 +53,7 @@
 <body>
 <header class="light">
     <a href="https://alan-zhufengxu.com" target="_blank">
-        <img alt="logo" src="/assets/alan_xu_logo.png"/>
+        <img alt="logo" src="../assets/alan_xu_logo.png"/>
         <div class="ml-s">Alan's Site</div>
     </a>
 </header>
