Fix logo problem

--- a/best-web-features-2018/scroll-snap.html
+++ b/best-web-features-2018/scroll-snap.html
@@ -50,7 +50,7 @@
 <body>
 <header class="dark fixed">
     <a href="https://alan-zhufengxu.com" target="_blank">
-        <img alt="logo" src="../assets/alan_xu_logo.png"/>
+        <img alt="logo" src="/assets/alan_xu_logo.png"/>
         <div class="ml-s">Alan's Site</div>
     </a>
 </header>
