--- a/best-web-features-2018/scroll-snap.html
+++ b/best-web-features-2018/scroll-snap.html
@@ -50,7 +50,7 @@
 <body>
 <header class="dark fixed">
     <a href="https://alan-zhufengxu.com" target="_blank">
-        <img alt="logo" src="/assets/alan_xu_logo.png"/>
+        <img alt="logo" src="https://c1.staticflickr.com/5/4879/31805591057_a8ccb69402_o.png"/>
         <div class="ml-s">Alan's Site</div>
     </a>
 </header>
@@ -81,10 +81,10 @@
             </div>
             <div class="implementation">
                 <div class="scroll-container">
-                    <img src="https://images.unsplash.com/photo-1502323777036-f29e3972d82f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80"/>
-                    <img src="https://images.unsplash.com/photo-1547381496-57b53693e8e4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80"/>
-                    <img src="https://images.unsplash.com/photo-1547357812-b5afb3656fc1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80"/>
-                    <img src="https://images.unsplash.com/photo-1547375182-16cf621d398a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80"/>
+                    <img src="https://images.unsplash.com/photo-1502323777036-f29e3972d82f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
+                    <img src="https://images.unsplash.com/photo-1547381496-57b53693e8e4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
+                    <img src="https://images.unsplash.com/photo-1547357812-b5afb3656fc1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
+                    <img src="https://images.unsplash.com/photo-1547375182-16cf621d398a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
                 </div>
                 <div class="code-wrapper">
                     <pre>
