--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <body>
 <header class="dark fixed">
     <a href="https://alan-zhufengxu.com" target="_blank">
-        <img alt="logo" src="/assets/alan_xu_logo.png"/>
+        <img alt="logo" src="https://c1.staticflickr.com/5/4879/31805591057_a8ccb69402_o.png"/>
         <div class="ml-s">Alan's Site</div>
     </a>
 </header>
