Resolve Parcel Build Bug

--- a/display-contents.html
+++ b/display-contents.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text|Open+Sans|Staatliches" rel="stylesheet">
     <link rel="shortcut icon" href="//s3-us-west-2.amazonaws.com/alansite/resources/favicon.ico" type="image/x-icon"/>
     <style type="text/less">
-        @import "../common/index";
+        @import "common/index";
 
         main {
             padding: 0;
