--- a/index.html
+++ b/index.html
@@ -193,21 +193,21 @@
             <ul class="sub-menu">
                 <li>
                     <div class="leaf"></div>
-                    <a href="best-web-features-2018/display-contents.html">
+                    <a href="display-contents.html">
                         display: contents;
                     </a>
                 </li>
                 <li>
                     <div class="leaf"></div>
-                    <a href="best-web-features-2018/reporting-observer.html">ReportingObserver</a>
+                    <a href="reporting-observer.html">ReportingObserver</a>
                 </li>
                 <li>
                     <div class="leaf"></div>
-                    <a href="best-web-features-2018/scroll-snap.html">Scroll Snap</a>
+                    <a href="scroll-snap.html">Scroll Snap</a>
                 </li>
                 <li>
                     <div class="leaf"></div>
-                    <a href="best-web-features-2018/conic-gradient.html">Conic Gradient</a>
+                    <a href="conic-gradient.html">Conic Gradient</a>
                 </li>
                 <li>
                     <div class="leaf"></div>
@@ -349,6 +349,6 @@
         <div>©2019, Alan'site. All Rights Reserved</div>
     </div>
 </footer>
-<script src="index.js"></script>
+<script src="script/index.js"></script>
 </body>
 </html>
