--- a/reporting-observer.html
+++ b/reporting-observer.html
@@ -163,6 +163,6 @@
         <div>©2019, Alan'site. All Rights Reserved</div>
     </div>
 </footer>
-<script src="ReportingObserver.js"></script>
+<script src="/script/ReportingObserver.js"></script>
 </body>
 </html>
