--- a/scroll-snap.html
+++ b/scroll-snap.html
@@ -81,10 +81,18 @@
             </div>
             <div class="implementation">
                 <div class="scroll-container">
-                    <img src="https://images.unsplash.com/photo-1502323777036-f29e3972d82f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
-                    <img src="https://images.unsplash.com/photo-1547381496-57b53693e8e4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
-                    <img src="https://images.unsplash.com/photo-1547357812-b5afb3656fc1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
-                    <img src="https://images.unsplash.com/photo-1547375182-16cf621d398a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
+                    <div>
+                        <img src="https://images.unsplash.com/photo-1502323777036-f29e3972d82f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
+                    </div>
+                    <div>
+                        <img src="https://images.unsplash.com/photo-1547381496-57b53693e8e4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
+                    </div>
+                    <div>
+                        <img src="https://images.unsplash.com/photo-1547357812-b5afb3656fc1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
+                    </div>
+                    <div>
+                        <img src="https://images.unsplash.com/photo-1547375182-16cf621d398a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80"/>
+                    </div>
                 </div>
                 <div class="code-wrapper">
                     <pre>
