Feature: toggleAttribute - add new feature - remove some trivial features from the list

--- a/index.html
+++ b/index.html
@@ -211,10 +211,6 @@
                 </li>
                 <li>
                     <div class="leaf"></div>
-                    <a>Async Clipboard API</a>
-                </li>
-                <li>
-                    <div class="leaf"></div>
                     <a>CSS Typed OM</a>
                 </li>
                 <li>
@@ -235,7 +231,7 @@
                 </li>
                 <li>
                     <div class="leaf"></div>
-                    <a>toggleAttribute</a>
+                    <a href="toggle-attribute.html">toggleAttribute</a>
                 </li>
                 <li>
                     <div class="leaf"></div>
