Refine: Header Refine

--- a/index.html
+++ b/index.html
@@ -162,11 +162,12 @@
     </style>
 </head>
 <body>
-<header class="dark fixed">
+<header class="dark fixed flex-wrp item-center content-between">
     <a href="https://alan-zhufengxu.com" target="_blank">
         <img alt="logo" src="https://c1.staticflickr.com/5/4879/31805591057_a8ccb69402_o.png"/>
         <div class="ml-s">Alan's Site</div>
     </a>
+    <a href="/http203/">HTTP203</a>
 </header>
 <main>
     <section class="search-wrapper flex-wrp item-center">
